platform/gitops/components/platform/forgejo/jobs/base/networkpolicy-forgejo-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forgejo-egress
  namespace: forgejo
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - forgejo
          - gitea
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - port: 443
          protocol: TCP
        - port: 15012
          protocol: TCP
        - port: 15017
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: postgres
      ports:
        - port: 5432
          protocol: TCP
    - to:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                  - valkey
                  - valkey-sentinel
      ports:
        - port: 6379
          protocol: TCP
        - port: 26379
          protocol: TCP
