platform/gitops/components/platform/forgejo/jobs/base/networkpolicy-forgejo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forgejo-ingress
  namespace: forgejo
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - forgejo
          - gitea
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: rbac-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: forgejo
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tenant-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: tenant-forgejo-controller
      ports:
        - port: 3000
          protocol: TCP
